@@ -45,6 +45,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17741: Add ElementTree.IncrementalParser, an event-driven parser
+  for non-blocking applications.
+
 - Issue #17555: Fix ForkAwareThreadLock so that size of after fork
   registry does not grow exponentially with generation of process.
 
